--- a/frontend/src/components/user/home/Hero.module.css
+++ b/frontend/src/components/user/home/Hero.module.css
@@ -123,7 +123,12 @@
 .gr1{
     background-position-y: 0px;
     transform: translateX(-20%)translateY(-20%)rotate(-20deg);
+    /* transition: transform 2s; */
+    /* transition-delay: 5s; */
+    /* transform: translateX(0%)translateY(0%)rotate(0deg);
+    animation: gridAnim1 .3s 4s 1; */
 }
+
 .gr2{
     background-position-x: 33%;
     /* background-position-y: 10%; */
@@ -156,6 +161,8 @@
     background-position-x: 100%;
     background-position-y: 33%;
     transform: translateX(20%);
+    transition: all .2s;
+    transition-delay: 2s;
 
 }
 
@@ -165,6 +172,8 @@
     background-position-y: 50%;
     background-position-y: 66%;
     transform: translateX(-20%);
+    /* transition: all .2s;
+    transition-delay: 4s; */
 }
 .gr10{
     background-position-x: 33%;
@@ -203,9 +212,18 @@
     background-position-y: 100%;
 
     transform: translateX(20%)translateY(20%)rotate(20deg);
+    /* transition: all .2s;
+    transition-delay: 3s; */
 }
 
-
+/* @keyframes gridAnim1{
+    from{
+        transform: translateX(0%)translateY(0%)rotate(0deg);
+    }
+    to{
+        transform: translateX(-20%)translateY(-20%)rotate(-20deg);
+    }
+} */
 
 /* @media only screen and (max-width: 37.5em) {
     body{
@@ -242,6 +260,9 @@
 }
    
  }
+
+
+
 
  @media only screen and (max-width: 37.5em) {
     .hero__image_wrapper{
